# Pong

./: .gitignore  Ball.cpp  Ball.h  CMakeLists.txt  PlayerPlatform.cpp  PlayerPlatform.h  Pong.cpp  Pong.h  PongGameState.cpp  PongGameState.h  PongPlayer.h  Readme.md  main.cpp  vcpkg.json
Engine/: Actor.h  CMakeLists.txt  Engine.cpp  Engine.h  GameState.cpp  GameState.h  Globals.cpp  Globals.h  Level.h  Log.cpp  Log.h
Engine/Assets/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  Font.h  Generated.cpp  Generated.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  SoundPlayer.cpp  SoundPlayer.h  Vertex.h
Engine/Collision/: Collision.h
Engine/Input/: InputManager.cpp  InputManager.h  InputTypes.h
Engine/Render/: InputCallback.h
Engine/Render/Shaders/: TextShader.frag  TextShader.vert
Engine/Scene/: Actor.cpp  Actor.h  Level.cpp  Level.h  SceneObject.cpp  SceneObject.h
Engine/Scene/UI/: TextUI.cpp  TextUI.h
Engine/render/: Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h
Engine/render/Shaders/: Shader.frag  Shader.vert
